<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">myMeteo</string>
    <string name="action_settings">Settings</string>
    <string name="current_weather">it\'s currently</string>
    <color name="background">#c5e26d</color>
    <color name="text_shadow">#7F000000</color>
    <color name="text_color">#ffffff</color>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="title_activity_menu_settings">MenuSettings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu_about">MenuAbout</string>
    <string name="celcius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kmh">KMPH</string>
    <string name="mph">MPH</string>
    <string name="title_activity_day_description">DayDescription</string>
    <string name="forecast">forecast</string>
    <string name="clickon">click an item to get more info</string>
    <string name="title_activity_forecast">Forecast</string>
    <string name="description">myMeteo v1.0</string>
    <string name="author">Bartosz Janota</string>
    <string name="email">bartosz.janota@gmail.com</string>
    <string name="phone">+48 609–394–392</string>
    <string name="student">student at AGH</string>
    <string name="settings">choose your settings</string>
    <string name="metricUnits">units:</string>
    <string name="iconDesc">weather icon</string>
</resources>