<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5sp"
    android:paddingLeft="5sp"
    android:paddingRight="5sp"
    android:paddingTop="5sp"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <TextView
        android:id="@+id/description"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dip"
        android:paddingBottom="3dip"
        android:textSize="30sp"
        android:textColor="@color/text_color"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
       	android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/description" />
   <TextView
        android:id="@+id/auhtor"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:paddingBottom="3dip"
        android:textSize="25sp"
        android:textColor="@color/text_color"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
       	android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/author" />
   <TextView
        android:id="@+id/email"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dip"
        android:textSize="20sp"
        android:textColor="@color/text_color"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
       	android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/email" /> 
   <TextView
        android:id="@+id/phone"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:textSize="20sp"
        android:textColor="@color/text_color"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
       	android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/phone" />  
    <TextView
        android:id="@+id/student"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dip"
        android:textSize="20sp"
        android:textColor="@color/text_color"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
       	android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/student" />    
</LinearLayout>